[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scripts/Tower/Tower.gd" type="Script" id=1]
[ext_resource path="res://Assets/Towers/dart_monkey.png" type="Texture2D" id=2]
[ext_resource path="res://Assets/Towers/wizard_monkey.png" type="Texture2D" id=3]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ) ],
"loop": false,
"name": "default",
"speed": 0.0
} ]

[sub_resource type="CircleShape2D" id=3]
radius = 14.1421

[sub_resource type="CircleShape2D" id=2]
radius = 8.0

[sub_resource type="CircleShape2D" id=4]

[node name="Tower" type="Area2D"]
collision_layer = 0
collision_mask = 0
monitorable = false
script = ExtResource( 1 )
tower_projectile_speed = 8

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
frames = SubResource( 1 )
offset = Vector2( -1, 0 )

[node name="AttackCooldown" type="Timer" parent="."]
wait_time = 0.5

[node name="TowerClickRegion" type="Area2D" parent="."]
visible = false
collision_layer = 16
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="TowerClickRegion"]
shape = SubResource( 3 )

[node name="TowerDetectionZone" type="Area2D" parent="."]
visible = false
modulate = Color( 0, 0, 0, 0.819608 )
collision_layer = 8
collision_mask = 4

[node name="DetectionZone" type="CollisionShape2D" parent="TowerDetectionZone"]
modulate = Color( 0.0745098, 0.839216, 0.0313726, 0.784314 )
shape = SubResource( 2 )

[node name="TowerPlaceZone" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="TowerPlaceZone"]
shape = SubResource( 4 )

[connection signal="mouse_entered" from="TowerClickRegion" to="." method="_on_TowerClickRegion_mouse_entered"]
[connection signal="mouse_exited" from="TowerClickRegion" to="." method="_on_TowerClickRegion_mouse_exited"]
[connection signal="area_entered" from="TowerDetectionZone" to="." method="_on_TowerDetectionZone_area_entered"]
[connection signal="area_exited" from="TowerDetectionZone" to="." method="_on_TowerDetectionZone_area_exited"]
